[package]
name = "geometry-predicates"
version = "0.3.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT"
description = "A Rust port of robust geometric predicates"

homepage = "https://github.com/elrnv/geometry-predicates-rs"
repository = "https://github.com/elrnv/geometry-predicates-rs"
readme = "README.md"

keywords = ["geometry", "predicate", "robust", "exact", "arithmetic"]

categories = ["algorithms"]
edition = "2018"

[[bench]]
name = "criterion"
harness = false

[badges]
travis-ci = { repository = "elrnv/geometry-predicates-rs", branch = "master" }

[features]
unstable = []
transpiled = []

[dependencies]

[dev-dependencies]
rand = "0.8"
criterion = "0.3.5"
num-rational = "0.4.0"
num-traits = "0.2.14"
